feat: use `cartesi-prt-contracts`

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ common-rs/Cargo.lock
 prt/lua_poc/outputs/
 prt/lua_poc/pixels/
 node_modules
-prt/prt-rs/core/src/contract/*tournament.rs
+prt/contract-bindings/src/*.rs
+!prt/contract-bindings/src/lib.rs
+prt/contract-bindings/Cargo.lock
 prt/machine-emulator-sdk
