--- a/prt/contract-bindings/Cargo.toml
+++ b/prt/contract-bindings/Cargo.toml
@@ -15,6 +15,6 @@ readme = "README.md"
 repository = "https://github.com/cartesi/dave"
 
 [dependencies]
-ethers = { version = "2", default-features = false, features = ["abigen"] }
+alloy = { version = "0.2.1", features = ["sol-types", "contract"] }
 serde = "1"
 
