feat(prt-rs): adopt `alloy` & `ruint`

--- a/common-rs/merkle/Cargo.toml
+++ b/common-rs/merkle/Cargo.toml
@@ -11,6 +11,7 @@ readme = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
+alloy = { version = "0.2.1", features = ["sol-types"] }
 hex = "0.4"
 ruint = "1.12"
 sha3 = "0.10"
