--- a/prt/prt-rs/Cargo.toml
+++ b/prt/prt-rs/Cargo.toml
@@ -30,7 +30,7 @@ anyhow = "1.0"
 async-recursion = "1"
 async-trait = "0.1"
 clap = { version = "4.5", features = ["derive", "env"] }
-ethers = "2.0"
+alloy = { version = "0.2.1", features = ["sol-types", "contract", "network", "reqwest", "signers", "signer-local"] }
 futures = "0.3"
 log = "0.4"
 tokio = { version = "1", features = ["full"] }
