--- a/prt/prt-rs/compute/Cargo.toml
+++ b/prt/prt-rs/compute/Cargo.toml
@@ -12,9 +12,9 @@ repository = { workspace = true }
 
 [dependencies]
 cartesi-prt-core = { path = "../core" }
+alloy = { version = "0.2.1", features = ["sol-types"] }
 anyhow = { workspace = true }
 clap = { workspace = true }
-ethers = { workspace = true }
 tokio = { workspace = true }
 log = { workspace = true }
 env_logger = "0.10"
