--- a/prt/prt-rs/core/Cargo.toml
+++ b/prt/prt-rs/core/Cargo.toml
@@ -8,19 +8,15 @@ cartesi-dave-arithmetic = { workspace = true }
 cartesi-dave-merkle = { workspace = true }
 cartesi-machine = { workspace = true }
 cartesi-prt-contracts = { workspace = true }
+alloy = { workspace = true }
 anyhow = { workspace = true }
 async-recursion = { workspace = true }
 async-trait = { workspace = true }
 clap = { workspace = true }
-ethers = { workspace = true }
 log = { workspace = true }
 clap_derive = "=4.5.5"
 hex = "0.4.3"
+num-traits = "0.2.19"
+ruint = { version = "1.12", features = ["num-traits"] }
 sha3 = "0.10.8"
 thiserror = "1.0.50"
-
-[build-dependencies]
-convert_case = "0.6.0"
-ethers-contract-abigen = "2.0.11"
-foundry-compilers = "0.1.3"
-serde_json = "1.0.107"
