chore(node): move `rollups-node` to `cartesi-rollups/node`

--- a/cartesi-rollups/node/Cargo.toml
+++ b/cartesi-rollups/node/Cargo.toml
@@ -28,10 +28,10 @@ rollups-epoch-manager = { version = "0.1", path = "epoch-manager" }
 rollups-machine-runner = { version = "0.1", path = "machine-runner" }
 rollups-state-manager = { version = "0.1", path = "state-manager" }
 
-cartesi-machine = { path = "../machine/rust-bindings/cartesi-machine" }
-cartesi-dave-arithmetic = { path = "../common-rs/arithmetic" }
-cartesi-dave-merkle = { path = "../common-rs/merkle" }
-cartesi-prt-core = { path = "../prt/prt-rs/core" }
+cartesi-machine = { path = "../../machine/rust-bindings/cartesi-machine" }
+cartesi-dave-arithmetic = { path = "../../common-rs/arithmetic" }
+cartesi-dave-merkle = { path = "../../common-rs/merkle" }
+cartesi-prt-core = { path = "../../prt/prt-rs/core" }
 
 anyhow = "1.0"
 async-recursion = "1"
