--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ common-rs/Cargo.lock
 prt/lua_poc/outputs/
 prt/lua_poc/pixels/
 node_modules
-prt/contract-bindings/src/contract
-prt/contract-bindings/Cargo.lock
+**/contract-bindings/src/contract
+**/contract-bindings/Cargo.lock
 prt/machine-emulator-sdk
