--- a/cartesi-rollups/node/epoch-manager/Cargo.toml
+++ b/cartesi-rollups/node/epoch-manager/Cargo.toml
@@ -11,6 +11,6 @@ repository.workspace = true
 
 [dependencies]
 rollups-state-manager = { workspace = true }
+alloy = { workspace = true }
 anyhow = { workspace = true }
-ethers = { workspace = true }
 tokio = { workspace = true }
