--- a/prt/prt-rs/core/Cargo.toml
+++ b/prt/prt-rs/core/Cargo.toml
@@ -13,8 +13,8 @@ anyhow = { workspace = true }
 async-recursion = { workspace = true }
 async-trait = { workspace = true }
 clap = { workspace = true }
+clap_derive = { workspace = true }
 log = { workspace = true }
-clap_derive = "=4.5.5"
 hex = "0.4.3"
 num-traits = "0.2.19"
 ruint = { version = "1.12", features = ["num-traits"] }
