--- a/cartesi-rollups/node/epoch-manager/Cargo.toml
+++ b/cartesi-rollups/node/epoch-manager/Cargo.toml
@@ -10,7 +10,9 @@ readme.workspace = true
 repository.workspace = true
 
 [dependencies]
+cartesi-dave-contracts = { workspace = true }
 rollups-state-manager = { workspace = true }
+cartesi-prt-core = { workspace = true }
 alloy = { workspace = true }
 anyhow = { workspace = true }
 tokio = { workspace = true }
