--- a/cartesi-rollups/node/dave-rollups/Cargo.toml
+++ b/cartesi-rollups/node/dave-rollups/Cargo.toml
@@ -17,6 +17,7 @@ rollups-machine-runner = { workspace = true }
 rollups-state-manager = { workspace = true }
 
 cartesi-rollups-contracts = { workspace = true }
+cartesi-prt-core = { workspace = true }
 
 alloy = { workspace = true }
 anyhow = { workspace = true }
