--- a/machine/rust-bindings/cartesi-machine-sys/Cargo.toml
+++ b/machine/rust-bindings/cartesi-machine-sys/Cargo.toml
@@ -35,6 +35,6 @@ bindgen = "0.69"
 cfg-if = "1.0"
 
 hex-literal = "0.4.1"
-reqwest = { version = "0.12", features = ["blocking"], optional = true }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
 bytes = { version = "1.0", optional = true }
 sha1 = "0.10.6"
