--- a/cartesi-rollups/node/blockchain-reader/Cargo.toml
+++ b/cartesi-rollups/node/blockchain-reader/Cargo.toml
@@ -13,7 +13,6 @@ repository = { workspace = true }
 [dependencies]
 rollups-state-manager = { workspace = true }
 alloy = { workspace = true }
-alloy-rpc-types-eth = "0.2.1"
 async-recursion = { workspace = true }
 cartesi-dave-contracts = { workspace = true }
 cartesi-rollups-contracts = { workspace = true }
@@ -21,3 +20,6 @@ clap = { workspace = true }
 clap_derive = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+
+alloy-rpc-types-eth = "0.3.1"
+num-traits = "0.2.19"
