chore(dep): remove sdk, use step directly

--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -6,12 +6,12 @@ libs = ["lib"]
 remappings = [
     'rollups-contracts/=lib/rollups-contracts/contracts/',
     'prt-contracts/=../../prt/contracts/src/',
-    'step/=../../machine-emulator-sdk/solidity-step/',
+    'step/=../../machine/step/',
 ]
 
 allow_paths = [
     '../../prt/contracts/src/',
-    '../../machine-emulator-sdk/solidity-step/',
+    '../../machine/step/',
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
