--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "machine-emulator-sdk"]
-	path = machine-emulator-sdk
-	url = https://github.com/cartesi/machine-emulator-sdk
+[submodule "machine/step"]
+	path = machine/step
+	url = https://github.com/cartesi/machine-solidity-step
 [submodule "prt/contracts/lib/forge-std"]
 	path = prt/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
