--- a/prt/contracts/foundry.toml
+++ b/prt/contracts/foundry.toml
@@ -3,9 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-allow_paths = ['../../machine-emulator-sdk/solidity-step/']
+allow_paths = ['../../machine/step/']
 remappings = [
-    'step/=../../machine-emulator-sdk/solidity-step/',
+    'step/=../../machine/step/',
 ]
 
 [fmt]
