--- a/prt/prt-rs/Cargo.toml
+++ b/prt/prt-rs/Cargo.toml
@@ -1,11 +1,5 @@
-[workspace]
-resolver = "2"
-members = [
-    "core",
-    "compute",
-]
-
-[workspace.package]
+[package]
+name = "cartesi-prt-core"
 version = "0.1.0"
 
 authors = [
@@ -20,7 +14,7 @@ license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/cartesi/dave"
 
-[workspace.dependencies]
+[dependencies]
 cartesi-dave-arithmetic = { path = "../../common-rs/arithmetic" }
 cartesi-dave-merkle = { path = "../../common-rs/merkle" }
 cartesi-machine = { path = "../../machine/rust-bindings/cartesi-machine" }
@@ -30,8 +24,8 @@ anyhow = "1.0"
 async-recursion = "1"
 async-trait = "0.1"
 clap = { version = "4.5", features = ["derive", "env"] }
-clap_derive = "=4.5.13"
 alloy = { version = "0.3.1", features = ["sol-types", "contract", "network", "reqwest", "signers", "signer-local"] }
-futures = "0.3"
 log = "0.4"
-tokio = { version = "1", features = ["full"] }
+hex = "0.4.3"
+num-traits = "0.2.19"
+ruint = { version = "1.12", features = ["num-traits"] }
