feat(node): complete `compute-runner`

--- a/cartesi-rollups/node/compute-runner/Cargo.toml
+++ b/cartesi-rollups/node/compute-runner/Cargo.toml
@@ -12,3 +12,5 @@ repository.workspace = true
 [dependencies]
 cartesi-prt-core = { workspace = true }
 rollups-state-manager = { workspace = true }
+
+alloy = { workspace = true }
