--- a/prt/prt-rs/Cargo.toml
+++ b/prt/prt-rs/Cargo.toml
@@ -25,8 +25,14 @@ async-recursion = "1"
 async-trait = "0.1"
 clap = { version = "4.5", features = ["derive", "env"] }
 alloy = { version = "0.3.1", features = ["sol-types", "contract", "network", "reqwest", "signers", "signer-local"] }
+lazy_static = "1.4.0"
 log = "0.4"
 hex = "0.4.3"
 num-traits = "0.2.19"
 ruint = { version = "1.12", features = ["num-traits"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite_migration = "1.2.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
