--- a/prt/measure_constants/Makefile
+++ b/prt/measure_constants/Makefile
@@ -13,6 +13,24 @@ else
 DLLFLAGS=-shared -fPIC
 endif
 
+create-image:
+	@docker build -t cartesi/measure_script .
+
+measure-simple: create-image
+	@docker run --rm \
+		--env MACHINE_PATH=simple-program \
+		cartesi/measure_script:latest
+
+measure-stress: create-image
+	@docker run --rm \
+		--env MACHINE_PATH=debootstrap-machine-sparsed \
+		cartesi/measure_script:latest
+
+measure-doom: create-image
+	@docker run --rm \
+		--env MACHINE_PATH=doom-compute-machine \
+		cartesi/measure_script:latest
+
 chronos.so: $(FILES)
 	env $(CC) $(DLLFLAGS) $(CFLAGS) chronos.c -o chronos.so
 
