--- a/cartesi-rollups/node/compute-runner/Cargo.toml
+++ b/cartesi-rollups/node/compute-runner/Cargo.toml
@@ -14,3 +14,4 @@ cartesi-prt-core = { workspace = true }
 rollups-state-manager = { workspace = true }
 
 alloy = { workspace = true }
+log = { workspace = true }
