--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -14,4 +14,6 @@ allow_paths = [
     '../../machine/step/',
 ]
 
+solc-version = "0.8.27"
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
