--- a/cartesi-rollups/node/epoch-manager/Cargo.toml
+++ b/cartesi-rollups/node/epoch-manager/Cargo.toml
@@ -13,6 +13,9 @@ repository.workspace = true
 cartesi-dave-contracts = { workspace = true }
 rollups-state-manager = { workspace = true }
 cartesi-prt-core = { workspace = true }
+
 alloy = { workspace = true }
 anyhow = { workspace = true }
+log = { workspace = true }
+num-traits = { workspace = true }
 tokio = { workspace = true }
