--- a/prt/tests/compute/Dockerfile
+++ b/prt/tests/compute/Dockerfile
@@ -3,7 +3,7 @@ FROM cartesi/machine-emulator:0.18.1
 USER 0
 RUN apt-get -y update && \
     apt-get -y install curl gcc imagemagick make procps xxd pkg-config
-ENV FOUNDRY_NIGHTLY nightly-5b7e4cb3c882b28f3c32ba580de27ce7381f415a
+ENV FOUNDRY_NIGHTLY nightly-805d7cee81e78e9163b8ce3d86a0c3beb39772d4
 RUN curl -sSL https://github.com/foundry-rs/foundry/releases/download/${FOUNDRY_NIGHTLY}/foundry_nightly_linux_$(dpkg --print-architecture).tar.gz | \
     tar -zx -C /usr/local/bin
 
@@ -39,14 +39,13 @@ COPY ./prt/client-lua/ .
 
 WORKDIR "/app/tests/compute"
 COPY ./prt/tests/compute/ .
-RUN chmod +x compute-test-entrypoint.sh
+RUN chmod +x entrypoint.sh
 RUN chmod +x prt_compute.lua
 RUN chmod +x doom_showcase/process_doom_graphics.lua
 
 WORKDIR "/app"
 RUN mkdir -p pixels
 RUN mkdir -p outputs
-RUN mkdir -p /compute_data/0xa16E02E87b7454126E5E10d957A927A7F5B5d2be
 
 WORKDIR "/app/tests/compute"
-ENTRYPOINT ["./compute-test-entrypoint.sh"]
+ENTRYPOINT ["./entrypoint.sh"]
