--- a/cartesi-rollups/node/blockchain-reader/Cargo.toml
+++ b/cartesi-rollups/node/blockchain-reader/Cargo.toml
@@ -24,3 +24,14 @@ log = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 num-traits = { workspace = true }
+
+[dev-dependencies]
+alloy = { workspace = true, features = ["node-bindings"] }
+cartesi-dave-merkle = { workspace = true }
+cartesi-prt-core = { workspace = true }
+cartesi-prt-contracts = { path = "../../../prt/contract-bindings" }
+
+clap = { workspace = true }
+clap_derive = { workspace = true }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite_migration = "1.2.0"
