feat(cartesi-machine): update machine bindings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,11 +75,13 @@ cartesi-rollups-contracts = "=2.0.0-rc.16"
 
 # eth
 alloy = { version = "0.12.4", features = ["sol-types", "contract", "network", "reqwest", "signers", "signer-local"] }
+# alloy = { version = "0.8", features = ["contract", "network", "reqwest", "rpc-types", "signers", "signer-local", "sol-types"] }
 ruint = "1.12"
+tiny-keccak = { version = "2.0", features = ["keccak"] }
 
 # error handling
 anyhow = "1.0"
-thiserror = "1.0"
+thiserror = "2.0"
 
 # async
 async-recursion = "1"
