--- a/machine/rust-bindings/cartesi-machine/Cargo.toml
+++ b/machine/rust-bindings/cartesi-machine/Cargo.toml
@@ -17,5 +17,12 @@ remote_machine = ["cartesi-machine-sys/remote_machine"]
 [dependencies]
 cartesi-machine-sys = { path = "../cartesi-machine-sys" }
 
-hex = "0.4.3"
-thiserror = "1.0"
+base64 = "0.22"
+derive_builder = "0.20"
+hex = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "2.0"
+
+[dev-dependencies]
+tempfile = "3.16"
