chore: refactor build and tests pipeline
* introduce `just` and rewrite makefiles into justfiles
* unify all cargo workspaces into a single cargo workspace;
* unify all Dockerfiles into a single Dockerfile;
* implement anvil deployments as state dumps and loads;
* Change PRT time from timestamp to block number;
* refactor `echo` program build;
* implement node state directory configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
 .bin
 .env
 .vscode
-.DS_Store
+**/.DS_Store
 **/.idea/
 target/
-snapshots/
-common-rs/Cargo.lock
-prt/client-rs/Cargo.lock
-prt/tests/compute/outputs/
-prt/tests/compute/pixels/
 node_modules
-**/contract-bindings/src/contract
-**/contract-bindings/Cargo.lock
+**/snapshots/
 **/compute_data/
 **/rollups_data/
