--- a/prt/contracts/bindings-rs/Cargo.toml
+++ b/prt/contracts/bindings-rs/Cargo.toml
@@ -1,21 +1,18 @@
-[workspace]
-resolver = "2"
-members = [
-    "arithmetic",
-    "merkle",
-]
+[package]
+name = "cartesi-prt-contracts"
 
-[workspace.package]
 version = "0.1.0"
 
 authors = [
   "Gabriel Coutinho de Paula <gcdepaula@protonmail.io>",
-  "Algebraic Sofia <sofia@algebraic.dev>",
   "Stephen Chen <stephenx747@gmail.com>",
 ]
-description = "A Cartesi validator reference implementation"
+description = "Cartesi PRT contract bindings"
 edition = "2021"
 homepage = "https://github.com/cartesi/dave"
 license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/cartesi/dave"
+
+[dependencies]
+alloy = { workspace = true, features = ["sol-types", "contract"] }
