--- a/prt/tests/compute-rs/Cargo.toml
+++ b/prt/tests/compute-rs/Cargo.toml
@@ -18,8 +18,8 @@ repository = "https://github.com/cartesi/dave"
 cartesi-prt-core = { path = "../../client-rs" }
 
 anyhow = "1.0"
-alloy = { version = "0.8.0", features = ["sol-types"] }
-clap = { version = "4.5", features = ["derive", "env"] }
+alloy = { workspace = true, features = ["sol-types"] }
+clap = { workspace = true, features = ["derive", "env"] }
 env_logger = "0.11.5"
 log = "0.4"
-tokio = { version = "1", features = ["full"] }
+tokio = { workspace = true, features = ["full"] }
