feature(prt-rollups-test): add honeypot
adapt to new machine lua API
fix one-step proof lua
rework docker env
add honeypot
fix CI

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "cartesi-rollups/contracts/lib/openzeppelin-contracts"]
 	path = cartesi-rollups/contracts/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "test/programs/honeypot/honeypot"]
+	path = test/programs/honeypot/honeypot
+	url = https://github.com/edubart/honeypot
