--- a/machine/rust-bindings/cartesi-machine-sys/Cargo.toml
+++ b/machine/rust-bindings/cartesi-machine-sys/Cargo.toml
@@ -14,7 +14,7 @@ repository = { workspace = true }
 [features]
 remote_machine = []
 
-# default
+# Downloads from emulator's GitHub release
 download_uarch = ["reqwest", "bytes"]
 
 # requires docker daemon to be running
@@ -25,8 +25,6 @@ copy_uarch = []
 
 # requires setting env vars LIBCARTESI_PATH and INCLUDECARTESI_PATH
 external_cartesi = []
-
-default = ["download_uarch"]
 
 
 [dependencies]
